--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -38,5 +38,23 @@ services:
     depends_on:
       users-service:
         condition: service_started
+      web-service:
+        condition: service_started
+    links:
+      - users-service
+      - web-service 
+
+  web-service:
+    container_name: web-service
+    build:
+      context: https://github.com/gerbyzation/flask-microservices-client.git
+      args:
+        - NODE_ENV=production
+        - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+    ports:
+      - '9000:9000'
+    depends_on:
+      users-service:
+        condition: service_started
     links:
       - users-service
