--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,21 @@ services:
     links:
       - users-db
 
+  web-service:
+    container_name: web-service
+    build:
+      context: https://github.com/realpython/flask-microservices-client.git
+      args:
+        - NODE_ENV=development
+        - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+    ports:
+      - '9000:9000' # expose ports - HOST:CONTAINER
+    depends_on:
+      users-service:
+        condition: service_started
+    links:
+      - users-service
+
   nginx:
     container_name: nginx
     build: ./nginx/
@@ -37,5 +52,8 @@ services:
     depends_on:
       users-service:
         condition: service_started
+      web-service:
+        condition: service_started
     links:
       - users-service
+      - web-service
